[project]
name = "seo-linked"
version = "0.1.0"
description = "API для анализа внутренней перелинковки"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain-gigachat>=0.3.12,<0.4.0",
    "pydantic-settings>=2.0.0",
    "selectolax>=0.4.0",
    "simplemma>=1.1.2,<2.0.0",
    "tenacity>=8.2.3",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
