[project]
name = "seo-linked"
version = "0.1.0"
description = "API для анализа внутренней перелинковки"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain-gigachat>=0.3.12,<0.4.0",
    "playwright>=1.52.0",
    "pydantic-settings>=2.0.0",
    "selectolax>=0.4.0",
    "simplemma>=1.1.2,<2.0.0",
    "tenacity>=8.2.3",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["logs*", "tests*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
